# fewspy

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pixi.toml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: release.yml  test-cov.yml
docs/: index.md
docs/manuals/: contribute.md  get_started.ipynb  installation.md
docs/reference/: api.md  timeseries.md  wrappers.md
docs/tutorials/: installation_tutorial.md
envs/: environment.yml  environment_dev.yml  environment_test.yml
fewspy/: __init__.py  api.py  time_series.py
fewspy/cache/: __init__.py  manifest.py  time_series_cache.py
fewspy/io/: header_file.py  read_netcdf.py  read_parquet.py  read_xml.py
fewspy/utils/: transformations.py  url.py
fewspy/wrappers/: __init__.py  get_filters.py  get_locations.py  get_parameters.py  get_qualifiers.py  get_time_series.py  get_time_series_async.py
file_apis/: get_vullingsgraden.py  sample.json  sample.xml
manuals/contribute/: index.html
manuals/get_started/: index.html
manuals/installation/: index.html
notebooks/: get_timeseries.ipynb
reference/api/: index.html
reference/timeseries/: index.html
reference/wrappers/: index.html
scripts/: bump_version.py
search/: search_index.json
src/fewspy/: __init__.py  api.py  get_filters.py  get_locations.py  get_parameters.py  get_qualifiers.py  get_time_series.py  get_time_series_async.py  time_series.py
src/fewspy/cache/: manifest.py
src/fewspy/io/: __init__.py  json.py  netcdf.py  read_netcdf.py  read_xml.py  write_netcdf.py  xml.py
src/fewspy/utils/: conversions.py  timer.py  transformations.py  url.py
src/fewspy/wrappers/: __init__.py  get_locations.py  get_parameters.py  get_qualifiers.py  get_time_series.py  get_time_series_async.py  get_timezone_id.py
tests/: config.py  conftest.py  get_filters_test.py  get_locations_test.py  get_parameters_test.py  get_qualifiers_test.py  get_time_zone_id_test.py  get_timeseries_async_test.py  get_timeseries_test.py  get_timeseries_xml_test.py  io_xml_test.py  timeseries_test.py  timeseries_xml_test.py  twinpy_to_netcdf_test.py
tests/data/: filters.json  locations.gpkg  normal_test_series.xml  parameters.csv  pi_time_series.json  qualifiers.csv
tests/data/io/: sample.json  sample.nc  sample.xml  sample_only_headers.xml  twin_fewspy_ts.pickle
tests/data/io/twinpy_to_netcdf/: CL.berekend.nc  EGVms_m.meting.nc  (+12 more)
tests/hhnk/: convert_twinpy.py
tutorials/: Fewspy installation tutorial.docx  ~$wspy installation tutorial.docx  ~WRL0249.tmp
tutorials/installation_tutorial/: index.html
