[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fewspy"
description = "A Python API for the Deltares FEWS PI REST Web Service"
readme = "README.md"
authors = [
    { name = "Daniel Tollenaar", email = "daniel@d2hydro.nl" },
]
license = { text = "MIT" }

# Tested for python 3.9, 3.12 and 3.13
requires-python = ">=3.9,<3.14"
dependencies = [
    "aiohttp",
    "lxml",
    "nest-asyncio",
    "pandas",
    "pyarrow",
    "pydantic",
    "geopandas",
    "requests",
    "netCDF4",
    "xarray"
    ]

dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.flake8]
max-line-length = 120
max-complexity = 10

[tool.hatch.version]
source = "vcs"
tag-pattern = '^v?(?P<version>\d{4}\.\d{1,2}\.\d+(?:(?:a|b|rc)\d+)?(?:\.post\d+)?(?:\.dev\d+)?)$'

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[project.urls]
Source = "https://github.com/d2hydro/fewspy"
